packages/shulker-operator/src/reconcilers/proxy_fleet/snapshots/shulker_operator__reconcilers__proxy_fleet__fleet_autoscaler__tests__build_snapshot.snap
---
source: packages/shulker-operator/src/reconcilers/proxy_fleet/fleet_autoscaler.rs
expression: fleet_autoscaler
---
apiVersion: autoscaling.agones.dev/v1
kind: FleetAutoscaler
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: my-proxy
    minecraftcluster.shulkermc.io/name: my-cluster
    proxyfleet.shulkermc.io/name: my-proxy
  name: my-proxy
  namespace: default
spec:
  fleetName: my-proxy
  policy:
    type: Buffer
    buffer:
      maxReplicas: 8
      minReplicas: 3
      bufferSize: 2

